--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,51 @@
-pyTelegramBotAPI==4.6.0
+aiofiles==23.2.1
+aiogram==3.12.0
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
+aiosignal==1.3.1
+annotated-types==0.7.0
+async-timeout==4.0.3
+attrs==24.2.0
+blinker==1.4
+certifi==2024.8.30
+charset-normalizer==3.3.2
+command-not-found==0.3
+cryptography==3.4.8
+dbus-python==1.2.18
+distro==1.7.0
+distro-info==1.1+ubuntu0.1
+frozenlist==1.4.1
+httplib2==0.20.2
+idna==3.8
+importlib-metadata==4.6.4
+jeepney==0.7.1
+keyring==23.5.0
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+magic-filter==1.0.12
+more-itertools==8.10.0
+multidict==6.0.5
+netifaces==0.11.0
+oauthlib==3.2.0
 psycopg2-binary==2.9.6
+pydantic==2.8.2
+pydantic_core==2.20.1
+PyGObject==3.42.1
+PyJWT==2.3.0
+pyparsing==2.4.7
+python-apt==2.4.0+ubuntu2
+PyYAML==5.4.1
+requests==2.32.3
+SecretStorage==3.3.1
+six==1.16.0
+systemd-python==234
+typing_extensions==4.12.2
+ubuntu-advantage-tools==8001
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==2.2.2
+wadllib==1.3.6
+watchdog==5.0.0
+yarl==1.9.6
+zipp==1.0.0
