--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ pydantic_core==2.20.1
 PyGObject==3.42.1
 PyJWT==2.3.0
 pyparsing==2.4.7
+pyTelegramBotAPI==4.6.0
 python-apt==2.4.0+ubuntu2
 PyYAML==5.4.1
 requests==2.32.3
